---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

let svc = http.service()

svc.GET("/hello/:name", fn(req, res) {
  res.status(200)
  res.header("Content-Type", "text/plain")
  res.body(fmt("Hello, {name}!", { name: req.params.name }))
})

http.serve(svc)



OK
Root(
    [
        Var(
            Ident(
                "svc",
            ),
            Call(
                GetField(
                    GetVar(
                        Ident(
                            "http",
                        ),
                    ),
                    Ident(
                        "service",
                    ),
                ),
                [],
            ),
        ),
        StmtExpr(
            Call(
                GetField(
                    GetVar(
                        Ident(
                            "svc",
                        ),
                    ),
                    Ident(
                        "GET",
                    ),
                ),
                [
                    Str(
                        "/hello/:name",
                    ),
                    FuncAnon(
                        None,
                        Block(
                            [
                                StmtExpr(
                                    Call(
                                        GetField(
                                            GetVar(
                                                Ident(
                                                    "res",
                                                ),
                                            ),
                                            Ident(
                                                "status",
                                            ),
                                        ),
                                        [
                                            Int32(
                                                200,
                                            ),
                                        ],
                                    ),
                                ),
                                StmtExpr(
                                    Call(
                                        GetField(
                                            GetVar(
                                                Ident(
                                                    "res",
                                                ),
                                            ),
                                            Ident(
                                                "header",
                                            ),
                                        ),
                                        [
                                            Str(
                                                "Content-Type",
                                            ),
                                            Str(
                                                "text/plain",
                                            ),
                                        ],
                                    ),
                                ),
                                StmtExpr(
                                    Call(
                                        GetField(
                                            GetVar(
                                                Ident(
                                                    "res",
                                                ),
                                            ),
                                            Ident(
                                                "body",
                                            ),
                                        ),
                                        [
                                            Call(
                                                GetVar(
                                                    Ident(
                                                        "fmt",
                                                    ),
                                                ),
                                                [
                                                    Str(
                                                        "Hello, {name}!",
                                                    ),
                                                    Table(
                                                        [
                                                            TableEntry(
                                                                Str(
                                                                    "name",
                                                                ),
                                                                GetField(
                                                                    GetField(
                                                                        GetVar(
                                                                            Ident(
                                                                                "req",
                                                                            ),
                                                                        ),
                                                                        Ident(
                                                                            "params",
                                                                        ),
                                                                    ),
                                                                    Ident(
                                                                        "name",
                                                                    ),
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                ],
                                            ),
                                        ],
                                    ),
                                ),
                            ],
                        ),
                        [
                            Ident(
                                "req",
                            ),
                            Ident(
                                "res",
                            ),
                        ],
                    ),
                ],
            ),
        ),
        StmtExpr(
            Call(
                GetField(
                    GetVar(
                        Ident(
                            "http",
                        ),
                    ),
                    Ident(
                        "serve",
                    ),
                ),
                [
                    GetVar(
                        Ident(
                            "svc",
                        ),
                    ),
                ],
            ),
        ),
    ],
)
